<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#D71022"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/uuidEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/underline"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/uuid_num"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:paddingBottom="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/text_size16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/simNumEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/underline"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/sim_num"
                    android:inputType="number"
                    android:paddingBottom="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/text_size16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/underline"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password_str"
                    android:inputType="textPassword"
                    android:paddingBottom="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/text_size16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/branchCodeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/underline"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/branch_code"
                    android:paddingBottom="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/text_size16"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_border"
                    android:padding="5dp"
                    android:text="@string/submit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size15"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>