<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/ticket_collector"
                android:textColor="#D71022"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/branchNameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/branchAddressTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size16"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#C5BFB0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/mob_number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text=""
                android:id="@+id/userMobNum"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size25"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#C5BFB0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/total_tickets"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalTicketTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size25"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#C5BFB0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/confirm_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirmCodeTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size25"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#C5BFB0" />

            <Button
                android:id="@+id/doneBtn"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_border"
                android:padding="5dp"
                android:text="@string/done"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size15"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>