<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ticket_collector"
        android:textColor="#D71022"
        android:textSize="@dimen/text_size20"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/branchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/branchAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size16"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="#C5BFB0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/mobNumberEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/underline"
                    android:ems="10"
                    android:inputType="number"
                    android:gravity="center"
                    android:hint="@string/mob_number"
                    android:paddingBottom="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/text_size16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/confirmCodeEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/underline"
                    android:ems="10"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:gravity="center"
                    android:hint="@string/confirm_code"
                    android:inputType="phone"
                    android:paddingBottom="5dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="@dimen/text_size16"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_border"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/submit"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size15"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>